# canvas-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  record_demo.mjs
.claude/: settings.json
.claude/agents/: simplify.md
src/: app.rs  chat_panel.rs  demo_paths.rs  index.css  layers_panel.rs  lib.rs  properties_panel.rs  resizable_canvas.rs  snap_logic.rs  types.rs  utils.rs  version.rs  version_panel.rs
src/components/: gpu_canvas.rs  mod.rs  overlay.rs
src/gpu/: mod.rs  renderer.rs  shaders.wgsl  tessellation.rs  vertex.rs
src/scene/: graph.rs  layer.rs  mod.rs  shape.rs  svg_path.rs  types.rs
static/: tailwind.css
tests/: package-lock.json  package.json  playwright.config.ts  record_fresh.mjs
tests/e2e/: resizable-canvas.spec.ts  snap-logic.spec.ts.disabled  snap-visuals.spec.ts
tests/e2e/helpers/: assertions.ts  canvas-helpers.ts
videos/: polygon_selection_demo.webm  snoopy_selection_demo.webm
