[package]
name = "rendering-groups"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "SvgElement",
    "SvgsvgElement",
    "SvgPolygonElement",
    "SvgRectElement",
    "SvgLineElement",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "HtmlInputElement",
    "InputEvent",
] }
wasm-bindgen = "0.2"
gloo = "0.11"
gloo-events = "0.2"
gloo-utils = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
